--- a/week-01/Trejo-Jesus/styles/main.css
+++ b/week-01/Trejo-Jesus/styles/main.css
@@ -13,7 +13,9 @@ h1 {
  font-size: 30px; 
  font-weight: bold;
  margin-top: 20px;
- margin-left: 20px;
+ 
+ background-color: #DCD9D9;
+ height: 50px;
 }
 
 h2 {
@@ -184,10 +186,6 @@ div .nav .current{
  width: 150px;
 
  
- 
- 
- overflow: hidden;
- position: relative;
 }
 
 div .img:hover  {
@@ -388,6 +386,7 @@ div .img5:hover  {
 .container {
  width: 940px;
  height: 350px;
+ padding: 10px;
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
