--- a/week-01/Trejo-Jesus/styles/main.css
+++ b/week-01/Trejo-Jesus/styles/main.css
@@ -30,9 +30,9 @@ h3 {
  line-height: 15px;
 }
 
-p { font-size: 15px;
- line-height: 20px
-margin-left: 20px;
+p { font-size: 16px;
+ line-height: 22px;
+
 margin-bottom:20px;
 }
 
@@ -60,332 +60,29 @@ iframe {
  right:20px; 
 }
 
- /* form begins */  
-
-form {
- background-color:#ccc;
- width:280px;
- height: 346px;
- padding:10px;
- border: 1px solid #ff8a00;
- position: relative;
- margin-bottom: 10px;
-}
-
-textarea {
- width:250px;
- height:120px;
- border: 1px solid #ff8a00;
-}
-
-.submit-container {
- text-align:right;
-}
-
-.submit-container input {
- font-size:15px;
- height: 30px;
- width: 150px;
- border-radius:5px;
- background-color:#666;
- color:#fff;
- text-align: center;
- position: absolute;
- left: 10px;
-} 
-
-#name{
- width: 250px;
- height:20px;
- margin-bottom: 10px;
- border: 1px solid #ff8a00;
-}
-
-#email{
- width: 250px;
- height:20px;
- margin-bottom: 10px;
- border: 1px solid #ff8a00;
-}
-
-/* form ends */ 
-
-
 .cont {
  position: absolute;
  right: 20px;
  top: 328px;
 }
 
-
-/* nav begins */ 
-
-div .nav a:link, a:visited {
- text-decoration: none;
-/*background-color: #666;*/
- padding-right: 10px;
- padding-left: 10px;
- padding-top: 5px;
- padding-bottom: 5px;
- color: #fff;
- width: 168px;
- text-align: center;	
- display: inline-block;
-}
-  
-div .nav a:hover, a:active {
- background-color: #ff8a00;
- color: #3E3E3E;
- display: inline-block;
-} 
-  
-.nav {  
- background-color:#666;
- height:28px;
- position: relative		
-}
-
-.sub-menu{
- background-color:#666;
- width: 188px;
- top:28px;
- left:188px;
- overflow:hidden;
- height:0px;
- text-align: left;
- position: absolute;
- z-index:500
-}
-
-.sub-menu li{
- background-color: #666;
-}
-
-.sub-menu li:hover{
- background-color:#ff8a00;
-}
-
-.nav li:hover .sub-menu{
- height:120px;
- transition:all 1s;
-}
-
-div .nav .current{
- background-color: #ff8a00;
- color: #3E3E3E;
-}
-
- /* nav ends */ 
-
- /*img divs */
-
 .img{
  border:1px solid #ff8a00;
- top:20px;
- left:20px;
+ top:91px;
+ left:10px;
  width: 150px;
-
- 
+ position: absolute;
+ height: 177px;
 }
+ 
 
 div .img:hover  {
  border:1px solid #666;
 }
 
-.caption{
-  position:absolute;
-  background: rgba(0,0,0,0.5);
-  color:#ffffff;
-  text-align:center;
-  top: 112px;
-  width: 150px;
-  height:100px;
-  left:0px;
-  transition:all 0.5s;
-}
-
-.img:hover .caption{
-  top: 60px;
-  transition:all 0.5s;
-}
-
-
-.img1{
- border:1px solid #ff8a00;
- top:-102px;
- left:185px;
- width:150px;
- height:100px;
- overflow: hidden;
- position: relative;
-}
-
-div .img1:hover  {
- border:1px solid #666;
-}
-
-.caption1{
-  position:absolute;
-  background: rgba(0,0,0,0.5);
-  color:#ffffff;
-  text-align:center;
-  top: 112px;
-  width: 150px;
-  height:100px;
-  left:0px;
-  transition:all 0.5s;
-}
-
-.img1:hover .caption1{
-  top: 60px;
-  transition:all 0.5s;
-}
-
-.img2{
- border:1px solid #ff8a00;
- left:369px;
- top:-204px;
- width: 150px;
- height:100px;
- overflow: hidden;
- position: relative;
-}
-
-div .img2:hover  {
- border:1px solid #666;
-}
-
-.caption2{
-  position:absolute;
-  background: rgba(0,0,0,0.5);
-  color:#ffffff;
-  text-align:center;
-  top: 112px;
-  width: 150px;
-  height:100px;
-  left:0px;
-  transition:all 0.5s;
-}
-
-.img2:hover .caption2{
-  top: 60px;
-  transition:all 0.5s;
-}
-
-.img3{
- border:1px solid #ff8a00;
- top:-174px;
- left: 5px;
- width:150px;
- height:100px;
- overflow: hidden;
- position: relative;
-}
-
-div .img3:hover  {
- border:1px solid #666;
-}
-
-.caption3{
-  position:absolute;
-  background: rgba(0,0,0,0.5);
-  color:#ffffff;
-  text-align:center;
-  top: 112px;
-  width: 150px;
-  height:100px;
-  left:0px;
-  transition:all 0.5s;
-}
-
-.img3:hover .caption3{
-  top: 60px;
-  transition:all 0.5s;
-}
-
-
-.img4{
- border:1px solid #ff8a00;
- top:-274px;
- left:185px;
- width:150px;
- height:100px;
- overflow: hidden;
- position: relative;
-}
-
-div .img4:hover  {
- border:1px solid #666;
-}
-
-.caption4{
-  position:absolute;
-  background: rgba(0,0,0,0.5);
-  color:#ffffff;
-  text-align:center;
-  top: 112px;
-  width: 150px;
-  height:100px;
-  left:0px;
-  transition:all 0.5s;
-}
-
-.img4:hover .caption4{
-  top: 60px;
-  transition:all 0.5s;
-}
-
-.img5{
- border:1px solid #ff8a00;
- top:-376px;
- left:367px;
- width:150px;
- height:100px;
- overflow: hidden;
- position: relative;
-}
-
-div .img5:hover  {
- border:1px solid #666;
-}
-
-.caption5{
-  position:absolute;
-  background: rgba(0,0,0,0.5);
-  color:#ffffff;
-  text-align:center;
-  top: 112px;
-  width: 150px;
-  height:100px;
-  left:0px;
-  transition:all 0.5s;
-}
-
-.img5:hover .caption5{
-  top: 60px;
-  transition:all 0.5s;
-}
-
- /*img divs ends */
-
-.header { 
- height: 90px;
- background-image:url('../headerbanner.jpg');
- position:relative;
-}
-
-.header h1 { 
- font-size: 50px;
- position: absolute;
- top: -18px;
- left: 4px;
- color: rgba(255,255,255,0.3);
- text-transform:uppercase;
-}
-
 .container {
  width: 940px;
- height: 350px;
+ height: 600px;
  padding: 10px;
  margin-top: 10px;
  margin-left: auto;
@@ -410,218 +107,6 @@ div .img5:hover  {
  margin-bottom: 10px;
 }
 		
-.sidebar1 {
- background-color: #666;
- width: 210px;
- min-height: 150px;
- float: left;
- padding-left: 10px;
- padding-right: 10px;
- color: #fff;
- font-size: .85em;
- margin-top: 10px;
- margin-bottom: 5px;
- margin-left: 10px;
- position:relative;
-}
-/*Sidebar 1*/
-div .sidebar1 a:link, a:visited {
- text-decoration: none;
- color: #fff;
-}
-
-div .sidebar1 a:hover, a:active{
- color: #ff8a00;
-} 
-
-.download img:hover {
- border:1px solid #3E3E3E;
-}
-
-.download{
- height: 30px;
- width: 30px;
- position: absolute;
- top:60px;
-}
-
-.res{
- position: absolute;
- top:80px;
-}
-
-.download1{
-  height: 30px;
-  width: 30px;
-  position: absolute;
-  top:60px;
-  left:80px;
-}
-
-.port{
- position: absolute;
- top:80px;
- left: 80px;
-}
-
-/*Sidebar 1 ends*/
-/*Sidebar 2 begins*/
-
-.sidebar2 {
- background-color: #ff8a00;
- width: 210px;
- min-height: 120px;
- float: left;
- padding-left: 10px;
- padding-right: 10px;
- color: #fff;
- font-size: .85em;
- margin-top: 5px;
- margin-bottom: 10px;
- margin-left: 10px;
- position: relative;
-}
-
-.social{
-  height:30px;
-  width:30px;
-  position: absolute;
-  top:24px;
-}
-
-.social1{
-  height:30px;
-  width:30px;
-  position: absolute;
-  top:24px;
-  left: 25px;
-}
-
-.social2{
-  height: 30px;
-  width:30px;
-  position: absolute;
-  top:24px;
-  left: 44px;
-}
-
-.social3{
-  height: 30px;
-  width:30px;
-  position: absolute;
-  top:24px;
-  left: 64px;
-}
-
-div.social a:hover img{
- background-color: rgba(255,255,255,0.1);
- border:1px solid #fff; 
-}
-div.social1 a:hover img{
- background-color: rgba(255,255,255,0.1);
- border:1px  solid #fff; 
-}
-
-div.social2 a:hover img{
- background-color: rgba(255,255,255,0.1);
- border:1px solid #fff; 
-}
-
-div.social3 a:hover img{
- background-color: rgba(255,255,255,0.1);
- border:1px solid #fff; 
-}
-
-/*Sidebar 2 ends*/
-
-/*about*/
-.para1 {
-  width: 320px;
-  position:absolute;
-  left: 10px;
-}
-
-.para2 {
-  width: 320px;
-  margin-top:84px;
-  position:absolute;
-  left: 10px;
-}
-
-.para3 {
-  width: 320px;
-  position:absolute;
-  left: 350px;
-}
-.para4 {
-  width: 320px;
-  margin-top:124px;
-  position:absolute;
-  left: 350px;
-}
-
-.para5 {
-  width: 320px;
-  margin-top:200px;
-  position:absolute;
-  left: 350px;
-}
-
-/*about ends*/
-
-/*blog*/
-
-.blog1{
-  background-color: #fff;
-  width: 205px;
-  padding: 5px;
-  border: 1px solid #ff8a00;
-  position: absolute;
-  top: 75px;
-  height: 314px;
-}
-
-.blog1 p {
-  font-size: 12px;
-  line-height: 15px;
-}
-
-
-.blog2{
-  background-color: #fff;
-  width: 205px;
-  padding: 5px;
-  border: 1px solid #ff8a00;
-  position: absolute;
-  top: 75px;
-  left: 240px;
-  height: 314px;
-}
-
-.blog2 p {
-  font-size: 12px;
-  line-height: 15px;
-}
-
-
-.blog3{
-  background-color: #fff;
-  width: 205px;
-  padding: 5px;
-  border: 1px solid #ff8a00;
-  position: absolute;
-  top: 75px;
-  left: 470px;
-  height: 314px;
-}
-
-.blog3 p {
-  font-size: 12px;
-  line-height: 15px;
-}
-
-/*blog ends*/
-		 
 .footer { 
  clear: both; 
  background-color: #DCDCDB; 
@@ -639,3 +124,17 @@ div.social3 a:hover img{
  text-align: center; 
 }
 
+.para {
+  width: 400px;
+  left: 180px;
+  top:75px;
+  position: absolute;
+}
+
+.twitt{
+position: absolute;
+   width: 350px;
+   height: 170px;
+   right: -9px;
+   top:12px;
+}
